--- a/src/index.css
+++ b/src/index.css
@@ -53,3 +53,24 @@ h1, .bold {
     background-color: #ff0000 !important;
     color: #fff !important;
 }
+
+/* .slideIn {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    animation: breath 12s linear;
+    z-index: 1;
+}
+
+@keyframes breath {
+    0% { position: absolute; max-height: 100px; }
+    5% {
+        position: absolute;
+        max-height: 100%;
+    }
+    90% {
+        position: absolute;
+        max-height: 100%;
+    }
+    100% {position: absolute; max-height: 100px;}
+} */
