--- a/src/Header/Header.module.css
+++ b/src/Header/Header.module.css
@@ -1,12 +1,10 @@
 .header {
     width: 100%;
-    height: 100%;
-    max-height: 100px;
+    height: 97px;
     padding: 20px;
     text-align: center;
     color: #f6f6f6;
     background-color: #ff5a00;
-    transition: max-height .8s ease-out;
 }
 
 .title {
